[feat]: liste history bdd profil
