# public/swagger.json
@@ -21,7 +21,6 @@
 					}
 				},
 				"required": [
-					"id",
 					"first_name",
 					"last_name"
 				],
@@ -41,17 +40,22 @@
 						"type": "number",
 						"format": "double"
 					},
-					"author": {
-						"$ref": "#/components/schemas/AuthorDTO"
-					},
 					"isbn": {
 						"type": "string"
+					},
+					"author_id": {
+						"type": "number",
+						"format": "double"
+					},
+					"author": {
+						"$ref": "#/components/schemas/AuthorDTO"
 					}
 				},
 				"required": [
 					"title",
 					"publish_year",
-					"isbn"
+					"isbn",
+					"author_id"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -91,6 +95,36 @@
 				],
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateBook",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BookDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Books"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/BookDTO"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/books/{id}": {
@@ -128,6 +162,51 @@
 						}
 					}
 				]
+			},
+			"patch": {
+				"operationId": "UpdateBook",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/BookDTO"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Books"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/BookDTO"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/authors": {
