# src/models/book.model.ts
@@ -3,10 +3,10 @@ import sequelize from "../config/database"; // Connection à la base de données
 import { Author } from "./author.model";
 
 export interface BookAttributes {
-  id: number;
+  id?: number;
   title: string;
   publish_year: number;
-  author_id: number;
+  author_id?: number;
   isbn: string;
   author?: Author;
 }
@@ -17,7 +17,7 @@ export class Book extends Model<BookAttributes> implements BookAttributes {
   public publish_year!: number;
   public author_id!: number;
   public isbn!: string;
-  public author?: Author;
+  public author!: Author;
 }
 
 Book.init(
