# src/routes/index.ts
@@ -31,8 +31,9 @@ const models: TsoaRoute.Models = {
             "id": {"dataType":"double"},
             "title": {"dataType":"string","required":true},
             "publish_year": {"dataType":"double","required":true},
-            "author": {"ref":"AuthorDTO"},
             "isbn": {"dataType":"string","required":true},
+            "author_id": {"dataType":"double"},
+            "author": {"ref":"AuthorDTO"},
         },
         "additionalProperties": false,
     },
@@ -82,36 +83,66 @@ export function RegisterRoutes(app: Router) {
                 return next(err);
             }
         });
-
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         app.get('/books/:id',
-          ...(fetchMiddlewares<RequestHandler>(BookController)),
-          ...(fetchMiddlewares<RequestHandler>(BookController.prototype.getBooksById)),
+            ...(fetchMiddlewares<RequestHandler>(BookController)),
+            ...(fetchMiddlewares<RequestHandler>(BookController.prototype.getBooksById)),
 
-          async function BookController_getBookById(request: ExRequest, response: ExResponse, next: any) {
-          const args: Record<string, TsoaRoute.ParameterSchema> = {
-                  id: {"in":"path","name":"id","required":true,"dataType":"double"},
-          };
+            async function BookController_getBooksById(request: ExRequest, response: ExResponse, next: any) {
+            const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    id: {"in":"path","name":"id","required":true,"dataType":"double"},
+            };
 
-          // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
-          let validatedArgs: any[] = [];
-          try {
-              validatedArgs = templateService.getValidatedArgs({ args, request, response });
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args, request, response });
 
-              const controller = new BookController();
+                const controller = new BookController();
 
-            await templateService.apiHandler({
-              methodName: 'getBookById',
-              controller,
-              response,
-              next,
-              validatedArgs,
-              successStatus: undefined,
-            });
-          } catch (err) {
-              return next(err);
-          }
-      });
+              await templateService.apiHandler({
+                methodName: 'getBooksById',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.post('/books',
+            ...(fetchMiddlewares<RequestHandler>(BookController)),
+            ...(fetchMiddlewares<RequestHandler>(BookController.prototype.createBook)),
+
+            async function BookController_createBook(request: ExRequest, response: ExResponse, next: any) {
+            const args: Record<string, TsoaRoute.ParameterSchema> = {
+                    requestBody: {"in":"body","name":"requestBody","required":true,"ref":"BookDTO"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args, request, response });
+
+                const controller = new BookController();
+
+              await templateService.apiHandler({
+                methodName: 'createBook',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
         app.get('/authors',
             ...(fetchMiddlewares<RequestHandler>(AuthorController)),
